# Algorithm

./: .gitignore  2_1.c  CMakeLists.txt  build.sh  clear.sh
include/: base.h  sqlist.h
src/: CMakeLists.txt  main.cpp
src/base/: random.cpp
src/m_pro/: CMakeLists.txt  m_pro.c  xxxx
src/sqlist/: CMakeLists.txt  base_sqlist.cpp  sqlist.cpp
src/temp/: temp.cpp
